# dpu-coprocessing-artifacts

./: .gitmodules  README.md
experiments/: .gitignore
experiments/capability-check/: .gitignore  capability_check_main.c  meson.build
experiments/co-processing/: .gitignore  CMakeLists.txt  co-processing-analysis.ipynb  co_processor.cpp  co_processor_compress.cpp  co_processor_decompress_deflate.cpp  co_processor_decompress_lz4.cpp  co_processor_regex.cpp  measure-compress.sh  measure-decompress-deflate.sh  measure-decompress-lz4.sh  measure-regex.sh  requirements.txt  vcpkg-configuration.json  vcpkg.json
experiments/co-processing/arm-build/: co-processing-compress  co-processing-decompress-deflate  co-processing-decompress-lz4
experiments/co-processing/inc/: doca_compress.hpp  doca_consumer.hpp  doca_decls.hpp  doca_decompress_deflate.hpp  doca_decompress_lz4.hpp  doca_regex.hpp  logger.hpp  lz4_pipe.hpp  re2_pipe.hpp  simple_barrier.hpp  zpipe.hpp
experiments/co-processing/src/: doca_compress.cpp  doca_consumer.cpp  doca_decompress_deflate.cpp  doca_decompress_lz4.cpp  doca_regex.cpp  lz4_pipe.cpp  re2_pipe.cpp  zpipe.cpp
experiments/dma/: dma_bench.c  dma_bench.py  meson.build.nvidia
experiments/local-compress/: .gitignore  Makefile  bench_utils.h  compress_common.c  compress_common.h  compress_deflate_faster.c  compress_deflate_main.c  compress_deflate_sample.c  compression_local.c  compressor-sw.py  decompress_deflate_faster.c  decompress_deflate_main.c  decompress_deflate_sample.c  decompress_lz4_block_faster.c  decompress_lz4_stream_main.c  decompress_lz4_stream_sample.c  decompressor-preparer.py  deflate_bench.py  deflate_comp_bench.py  lz4_bench.py  measure-cpu.sh  measure-dpu.sh  meson.build  meson.build.2.2.0  requirements.txt  silesia-analysis.ipynb
experiments/regex/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  deb-pkgs  measure-cpu.py  measure-dpu.sh  meson.build  regex_re2.cpp  regex_scan.c  regex_vectorscan.cpp  requirements.txt  us-accidents-analysis.ipynb  us-accidents-queries  vcpkg.json
experiments/switching-interference/: 00_prepare_dpus.sh  execute-host.sh  prepare-host.sh  switch-and-offload-decompress-deflate.sh  switch-and-offload-decompress-lz4.sh  switch-and-offload-dma.sh
scripts/: 01_install.sh  02_fetch_datasets.sh  03_fetch_binaries.sh  04_install_on_bf.sh  reproducibility.py  requirements.txt
scripts/tex/: .gitignore  main.tex  pdfa.xmpi
scripts/tex/figures/: compression-all.tex  compression-size-vs-throughput.tex  compression-throughput-breakdown.tex  compression-time-breakdown.tex  coprocessing-compress.tex  coprocessing-decompress-deflate.tex  coprocessing-decompress-lz4-bf3.tex  cpu-reduction.tex  decompression-all.tex  decompression-deflate-size-vs-throughput.tex  decompression-lz4-size-vs-throughput.tex  iperf-impact-latency.tex  iperf-impact-tput.tex
